--- a/index.html
+++ b/index.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page Design </title>
-    <link rel ="stylesheet" type = "text/css" href ="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel= "icon" href= "https://image.flaticon.com/icons/png/128/4472/4472515.png">
+    <link rel="stylesheet" href="./index.css">
+    <title>To-do List</title>
 </head>
-
 <body>
-    <div class = "container ">
-        <div class ="row">
-            <nav class = "navbar">
-                <h1>Logo</h1>
+    <h1 class="h1">To-do List</h1>
+    </p>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <br>
+                <input type="text" id= "input" placeholder="Add a task" maxlength="50">
+                <button class="btn" id="enter">
+                    <i class="fas fa-plus"></i>
+                </button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="list">
                 <ul>
-                    <li> <a href = " "> HOME </a> </li>
-                    <li> <a href =" " > ABOUT</a></li>
-                    <li> <a href =" " >SERVICES  </a></li>
-                    <li> <a href =" " > PORTFOLIO</a></li>
-                    <li> <a href =" " > CONTACT</a></li>
-
+                    <!-- <li>Example Task</li> -->
                 </ul>
-            </nav>
-            <div class ="content">
-                <h1>Create Your Own Website </h1>
-                <p>  As a freelance or developer  </p>
-                <a href =" ">Join for free  </a>
             </div>
         </div>
     </div>
-    
+    <script src= "./index.js"></script>
 </body>
 </html>
